--- a/sys-apps/fcron/files/fcron.conf
+++ b/sys-apps/fcron/files/fcron.conf
@@ -2,8 +2,8 @@
 #	See fcron.conf(5) for syntax and explanations.
 #
 # WARNING : this file must be owned by root:cron and 640.
-# 
-# $ Header: $
+#
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/fcron/files/fcron.conf,v 1.3 2002/04/27 21:46:45 bangert Exp $
 #
 
 # The spool directory where fcron stores its files
