added LICENSE, SLOT, $Headers

--- a/app-admin/msyslog/files/msyslog.conf
+++ b/app-admin/msyslog/files/msyslog.conf
@@ -1,5 +1,7 @@
 # /etc/msyslog/msyslog.conf: configuration file for msyslogd.
 #
+# $Header: /var/cvsroot/gentoo-x86/app-admin/msyslog/files/msyslog.conf,v 1.2 2002/05/04 01:22:36 woodchip Exp $
+#
 # Msyslog uses a slightly different syntax than the old syslogd.
 # See below and in /usr/share/doc/msyslog/examples for samples
 # and documentation.  See also the manpages for msyslog.conf(5),
