--- a/app-admin/webalizer/files/webalizer-2.01.10.conf
+++ b/app-admin/webalizer/files/webalizer-2.01.10.conf
@@ -1,6 +1,7 @@
 #
 # Sample Webalizer configuration file
 # Copyright 1997-1999 by Bradford L. Barrett (brad@mrunix.net)
+# $Header: /var/cvsroot/gentoo-x86/app-admin/webalizer/files/webalizer-2.01.10.conf,v 1.2 2002/05/04 01:22:37 woodchip Exp $
 #
 # Distributed under the GNU General Public License.  See the
 # files "Copyright" and "COPYING" provided with the webalizer
