add LICENSE, SLOT, $Headers.

--- a/net-misc/linesrv/files/linesrv.conf
+++ b/net-misc/linesrv/files/linesrv.conf
@@ -1,3 +1,4 @@
+# $Header: /var/cvsroot/gentoo-x86/net-misc/linesrv/files/linesrv.conf,v 1.2 2002/05/04 04:11:14 woodchip Exp $
 #
 # LineServer Global Settings
 #
