Added LICENSE, SLOT, $Headers, pam_stack aware pam.d/ file.

--- a/net-www/apache/files/conf/DynamicVhosts.conf
+++ b/net-www/apache/files/conf/DynamicVhosts.conf
@@ -1,4 +1,5 @@
-#   
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/files/conf/DynamicVhosts.conf,v 1.2 2002/05/04 23:23:01 woodchip Exp $
+
 #Simple dynamic virtual hosts
 #
 #   This extract from apache.conf implements the virtual host arrangement
