--- a/net-www/apache/files/conf/Vhosts.conf
+++ b/net-www/apache/files/conf/Vhosts.conf
@@ -1,3 +1,5 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/files/conf/Vhosts.conf,v 1.2 2002/05/04 23:23:01 woodchip Exp $
+
 ################# Vhosts.conf
 #This is where we store the VirtualHosts configuration. 
 #
