--- a/net-www/apache/files/conf/apache.conf
+++ b/net-www/apache/files/conf/apache.conf
@@ -1,3 +1,4 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/files/conf/apache.conf,v 1.2 2002/05/04 23:23:01 woodchip Exp $
 ### Main Configuration Section
 ### You really shouldn't change these settings unless you're a guru
 ###
