--- a/net-www/apache/files/conf/commonapache.conf
+++ b/net-www/apache/files/conf/commonapache.conf
@@ -1,3 +1,4 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/files/conf/commonapache.conf,v 1.4 2002/05/04 23:23:01 woodchip Exp $
 ### Common server configuration
 #
 User apache
