--- a/net-www/mod_dav/files/mod_dav.conf
+++ b/net-www/mod_dav/files/mod_dav.conf
@@ -1,3 +1,4 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_dav/files/mod_dav.conf,v 1.2 2002/05/04 23:23:01 woodchip Exp $
 <IfModule mod_dav.c>
 
 DAVLockDB /var/lock/mod_dav
