--- a/net-www/apache/files/conf/VirtualHomePages.conf
+++ b/net-www/apache/files/conf/VirtualHomePages.conf
@@ -1,3 +1,5 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/files/conf/VirtualHomePages.conf,v 1.2 2002/05/04 23:23:01 woodchip Exp $
+
 #A virtually hosted homepages system
 #
 #   This is an adjustment of the above system tailored for an ISP's
