--- a/net-www/mod_ssl/files/ssl.default-vhost.conf
+++ b/net-www/mod_ssl/files/ssl.default-vhost.conf
@@ -1,3 +1,4 @@
+# $Header: /var/cvsroot/gentoo-x86/net-www/mod_ssl/files/ssl.default-vhost.conf,v 1.2 2002/05/04 23:23:02 woodchip Exp $
 <IfModule mod_ssl.c>
 
 ##
