New ebuild and fix for hotplug startup

--- a/sys-apps/hotplug/files/hotplug.rc
+++ b/sys-apps/hotplug/files/hotplug.rc
@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hotplug/files/hotplug.rc,v 1.2 2002/02/25 23:02:14 woodchip Exp $
+# /space/gentoo/cvsroot/gentoo-x86/sys-apps/hotplug/files/hotplug.rc,v 1.2 2002/02/25 23:02:14 woodchip Exp
 
 depend() {
 	need modules
@@ -9,7 +9,7 @@ depend() {
 
 checkconfig() {
 	if [ ! -d /etc/hotplug ] ; then
-		eerror "USB Hotplug requires scripts & configs in /etc/hotplug !"
+		eerror "Hotplug requires scripts & configs in /etc/hotplug !"
 		return 1
 	fi
 }
@@ -17,12 +17,12 @@ checkconfig() {
 start() {
 	local error
 	checkconfig || return 1
-	ebegin "Starting USB Hotplug"
+	ebegin "Starting USB and PCI hotplugging"
 	for RC in /etc/hotplug/*.rc
 	do
 		$RC start
 		error=$?
-		if [ error ] ; then
+		if [ $error -ne 0 ] ; then
 			eend ${error} "hotplug script $RC failed at start"
 			return 1
 		fi
@@ -32,12 +32,12 @@ start() {
 
 stop() {
 	local error
-	ebegin "Stopping USB Hotplug "
+	ebegin "Stopping USB and PCI hotplugging"
 	for RC in /etc/hotplug/*.rc
 	do
 		$RC stop
 		error=$?
-		if [ error ] ; then
+		if [ $error -ne 0 ] ; then
 			eend ${error} "hot plug script $RC failed at stop"
 			return 1
 		fi
