--- a/media-sound/alsa-driver/files/alsa-modules.conf
+++ b/media-sound/alsa-driver/files/alsa-modules.conf
@@ -1,5 +1,5 @@
 # Alsa 0.9.X kernel modules' configuration file.
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/files/alsa-modules.conf,v 1.1 2002/04/28 17:18:10 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/files/alsa-modules.conf,v 1.2 2002/05/24 01:10:35 agenkin Exp $
 
 # ALSA portion
 alias char-major-116 snd
@@ -30,3 +30,6 @@ alias sound-service-0-12 snd-pcm-oss
 ## alias sound-service-1-0 snd-mixer-oss
 ## alias sound-service-1-3 snd-pcm-oss
 ## alias sound-service-1-12 snd-pcm-oss
+
+alias /dev/mixer snd-mixer-oss
+alias /dev/dsp snd-pcm-oss
