--- a/media-gfx/nvidia-cg-toolkit/files/nvidia-cg-toolkit-gl.pc.in
+++ b/media-gfx/nvidia-cg-toolkit/files/nvidia-cg-toolkit-gl.pc.in
@@ -7,4 +7,4 @@ Version: VERSION
 URL: HOMEPAGE
 Libs: -L${libdir} -lCg -lCgGL
 Cflags: -I${includedir}/
-Requires: nvidia-cg-toolkit
+Requires: nvidia-cg-toolkitSUFFIX
